Controller, business logic, data and views from Transactions

--- a/FlusBankWeb/Views/BanksOperation/Index.cshtml
+++ b/FlusBankWeb/Views/BanksOperation/Index.cshtml
@@ -13,7 +13,7 @@
 <table class="table">
     <tr>
         <th>
-           <label>Operacón</label>
+           <label>Operación</label>
         </th>
         <th>
             <label>Descripción</label>
