--- a/FlusBankWeb/Views/Shared/_Layout.cshtml
+++ b/FlusBankWeb/Views/Shared/_Layout.cshtml
@@ -24,6 +24,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Usuarios", "Index", "Users")</li>
+                    <li>@Html.ActionLink("Cuentas bancarias", "Index", "BankAccount")</li>
+                    <li>@Html.ActionLink("Operaciones bancarias", "Index", "BanksOperation")</li>
+                    <li>@Html.ActionLink("Movimientos", "Index", "Transactions")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
