--- a/FlusBankWeb/Views/Users/Create.cshtml
+++ b/FlusBankWeb/Views/Users/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Email</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="text" name="Email" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Nº Móvil</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="text" name="PhoneNumber" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">DNI/Pasaporte</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DNI, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="text" name="DNI" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.DNI, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Nombre</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="text" name="Name" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -51,7 +51,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Apellidos</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="text" name="Surname" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
             </div>
         </div>
