--- a/FlusBankWeb/Views/Users/Details.cshtml
+++ b/FlusBankWeb/Views/Users/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            <label>Nombre</label>
         </dt>
 
         <dd>
@@ -19,14 +19,14 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Surname)
+            <label>Apellidos</label>
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Surname)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            <label>Email</label>
         </dt>
 
         <dd>
@@ -34,7 +34,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            <label>Número teléfono</label>
         </dt>
 
         <dd>
@@ -42,7 +42,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserName)
+            <label>Nombre de usuario</label>
         </dt>
 
         <dd>
@@ -50,7 +50,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DNI)
+            <label>DNI</label>
         </dt>
 
         <dd>
@@ -59,7 +59,7 @@
 
 
         <dt>
-            @Html.DisplayNameFor(model => model.Rol)
+            <label>Rol</label>
         </dt>
 
         <dd>
