--- a/FlusBankWeb/Views/Users/Index.cshtml
+++ b/FlusBankWeb/Views/Users/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Usuarios</h2>
 
 <p>
-    @Html.ActionLink("Registrar usuario", "Create")
+    @Html.ActionLink("Registrar usuario", "Create", new { }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
