--- a/FlusBankWeb/Views/BanksOperation/Index.cshtml
+++ b/FlusBankWeb/Views/BanksOperation/Index.cshtml
@@ -4,16 +4,17 @@
     ViewBag.Title = "Operaciones";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@using FlusBankWeb.Utilities;
 
 <h2>Operaciones bancarias</h2>
 
 <p>
-    @Html.ActionLink("Crear nueva operación", "Create")
+    @Html.ActionLink("Crear operación", "Create", new { }, new { @class = "btn btn-primary" })
 </p>
 <table class="table">
     <tr>
         <th>
-           <label>Operación</label>
+            <label>Operación</label>
         </th>
         <th>
             <label>Descripción</label>
@@ -24,23 +25,28 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Type)
-        </td>
-        <td>
-            @Html.ActionLink("Editar", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Detalles", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Eliminar", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @{
+                    var typeOperation = new Enums();
+                    typeOperation.SetOperationValue(item.Type);
+                }
+                <span>@typeOperation.GetOperation()</span>
+            </td>
+            <td>
+                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
