--- a/FlusBankWeb/Views/Transactions/Details.cshtml
+++ b/FlusBankWeb/Views/Transactions/Details.cshtml
@@ -23,7 +23,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BankOperationId)
+            @Html.DisplayFor(model => model.OperationName)
         </dd>
 
         <dt>
@@ -61,6 +61,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Detalles", "Details", new { id = Model.Id }) |
     @Html.ActionLink("Volver a la lista", "Index")
 </p>
