--- a/FlusBankWeb/Views/Home/Index.cshtml
+++ b/FlusBankWeb/Views/Home/Index.cshtml
@@ -1,31 +1,50 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Inicio";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="row">
+    <h1 class="text-center">Consultas generales</h1>
+    <hr />
+    <div class="col-md-6">
+        <h2>Registra un usuario</h2>
+        <p>
+            Para comenzar con Flus Bank se necesita un usuario.
+        </p>
+        @Html.ActionLink("Registrar usuario", "../Users/Create", new { }, new { @class = "btn btn-s btn-primary" })
+    </div>
+
+    <div class="col-md-6">
+        <h2>Crear cuenta bancaria</h2>
+        <p>Una vez registrado el cliente se le podrá crear una cuenta bancaria</p>
+        @Html.ActionLink("Crear cuenta", "../BankAccount/Create", new { }, new { @class = "btn btn-s btn-primary" })
+    </div>
+
+    <div class="col-md-6">
+        <h2>Operaciones disponibles</h2>
+        <p>Podremos ayudar al cliente a consultar los movimientos que puede realizar.</p>
+        @Html.ActionLink("Consultar/facilitar operación", "../BanksOperation/Index", new { }, new { @class = "btn btn-s btn-primary" })
+    </div>
+
+    <div class="col-md-6">
+        <h2>Consulta de movimientos</h2>
+        <p>Podremos ayudar al cliente a consultar los movimientos que puede realizar.</p>
+        @Html.ActionLink("Ayuda sobre movimientos realizados", "../Transactions/Index", new { }, new { @class = "btn btn-s btn-primary" })
+    </div>
 </div>
 
+<hr />
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <h1 class="text-center">Otras consultas</h1>
+    <hr />
+    <div class="col-md-6">
+        <h2>Consultar información del cliente</h2>
+        <p>Mostrará información sobre los clientes</p>
+        @Html.ActionLink("Ver información", "../Users/Index", new { }, new { @class = "btn btn-s btn-primary" })
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+
+    <div class="col-md-6">
+        <h2>Ver cuentas bancarias de los clientes</h2>
+        <p>Consultar datos de la cuenta bancaria de un cliente</p>
+        @Html.ActionLink("Consulta datos", "../BankAccount/Index", new { }, new { @class = "btn btn-s btn-primary" })
     </div>
 </div>
