--- a/FlusBankWeb/Views/Shared/_Layout.cshtml
+++ b/FlusBankWeb/Views/Shared/_Layout.cshtml
@@ -17,10 +17,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Flus Bank", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a class = "navbar-brand" href="@Url.Action("Index", "Home")"><img style="height:2.5rem!important" src="~/Content/logo_small.png"/></a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav white">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Usuarios", "Index", "Users")</li>
                     <li>@Html.ActionLink("Cuentas bancarias", "Index", "BankAccount")</li>
