--- a/FlusBankWeb/Views/BankAccount/Index.cshtml
+++ b/FlusBankWeb/Views/BankAccount/Index.cshtml
@@ -6,64 +6,80 @@
 }
 @using FlusBankWeb.Utilities;
 
+@section styles{
+    <link href="//cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" rel="stylesheet" />
+}
+
 <h2>Cuentas bancarias</h2>
 
 <p>
     @Html.ActionLink("Crear cuenta", "Create", new { }, new { @class = "btn btn-primary" })
 </p>
-<table class="table">
-    <tr>
-        <th>
-            <label>Moneda</label>
-        </th>
-        <th>
-            <label>Fecha de creación</label>
-        </th>
-        <th>
-            <label>Tipo</label>
-        </th>
-        <th>
-            <label>Saldo</label>
-        </th>
-        <th>
-            <label>Comisión</label>
-        </th>
-        <th>
-            <label>IBAN</label>
-        </th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+<table class="table" id="tableDemo">
+    <thead>
         <tr>
-            <td>
-                @{
-                    var currencyType = new Enums();
-                    currencyType.SetCurrency(item.CurrencyId);
-                }
-                <span>@currencyType.GetCurrency()</span>
-            </td>
-            <td>
-                @item.TimeStamp.ToShortDateString()
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Balance)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Commission)<span>/Año</span>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
-            </td>
+            <th>
+                <label>Moneda</label>
+            </th>
+            <th>
+                <label>Fecha de creación</label>
+            </th>
+            <th>
+                <label>Tipo</label>
+            </th>
+            <th>
+                <label>Saldo</label>
+            </th>
+            <th>
+                <label>Comisión</label>
+            </th>
+            <th>
+                <label>IBAN</label>
+            </th>
+            <th></th>
         </tr>
-    }
+    </thead>
+
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @{
+                        var currencyType = new Enums();
+                        currencyType.SetCurrency(item.CurrencyId);
+                    }
+                    <span>@currencyType.GetCurrency()</span>
+                </td>
+                <td>
+                    @item.TimeStamp.ToShortDateString()
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Type)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Balance)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Commission)<span>/Año</span>
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Code)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Detalles", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Eliminar", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        }
+    </tbody>
 
 </table>
+
+@section scripts{
+    <script src="//cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
+    <script>
+        $('#tableDemo').DataTable();
+    </script>
+} 
