--- a/FlusBankWeb/Views/Shared/_Layout.cshtml
+++ b/FlusBankWeb/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewBag.Title - Flus Bank</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @RenderSection("styles", required: false)
 
 </head>
 <body>
@@ -28,7 +27,7 @@
                     <li>@Html.ActionLink("Operaciones bancarias", "Index", "BanksOperation")</li>
                     <li>@Html.ActionLink("Movimientos", "Index", "Transactions")</li>
                 </ul>
-                @*@Html.Partial("_LoginPartial")*@
+                @Html.Partial("../Access/LogOut")
             </div>
         </div>
     </div>
@@ -43,5 +42,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @RenderSection("styles", required: false)
 </body>
 </html>
